name:               servant-wasm-client
version:            0.1
description:
  This library lets you automatically derive Haskell functions that
  let you query each endpoint of a <http://hackage.haskell.org/package/servant servant> webservice.
  .
  See <http://haskell-servant.readthedocs.org/en/stable/tutorial/Client.html the client section of the tutorial>.
  .
  <https://github.com/haskell-servant/servant/blob/master/servant-client/CHANGELOG.md CHANGELOG>

license:            BSD3
license-file:       LICENSE
author:             Kari Pahula
maintainer:         kaol@iki.fi
copyright:
  2014-2016 Zalora South East Asia Pte Ltd, 2016-2017 Servant Contributors
  2025-2026 Kari Pahula

category:           Servant, Web
build-type:         Simple
cabal-version:      >=1.10

extra-source-files:
  CHANGELOG.md
  README.md

library
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:      -Wall
  exposed-modules:
    Servant.Client.Internal.ByteString
    Servant.Client.Internal.JS
    Servant.Client.Internal.WasmFetchClient
    Servant.Client.Wasm

  -- Bundled with GHC: Lower bound to not force re-installs
  -- text and mtl are bundled starting with GHC-8.4
  build-depends:
      base          >=4.9      && <5
    , bytestring    >=0.10.8.1 && <0.13
    , containers    >=0.5.7.1  && <0.9
    , mtl           >=2.2.2    && <2.4
    , text          >=1.2.3.0  && <2.2
    , transformers  >=0.5.2.0  && <0.7
    , ghc-experimental

  if impl(ghcjs -any) || arch(javascript)
    build-depends: ghcjs-base

  -- Servant dependencies.
  -- Strict dependency on `servant-client-core` as we re-export things.
  build-depends:    servant-client-core >=0.16 && <0.21
  build-depends:
      base-compat         >=0.10.5 && <=0.14.1
    , case-insensitive    >=1.2.0.0 && <1.3
    , exceptions          >=0.10.0  && <0.11
    , base64-bytestring
    , miso
    , http-media          >=0.7.1.3 && <0.9
    , http-types          >=0.12.2  && <0.13
    , monad-control       >=1.0.2.3 && <1.1
    , semigroupoids       >=5.3.1   && <6.1
    , string-conversions  >=0.3     && <0.5
    , transformers-base   >=0.4.4   && <0.5

  if impl(ghc >=8.0)
    ghc-options: -Wno-redundant-constraints
